<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_sera_de">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="valor">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="validacao">Favor preencher todos os campos</string>
</resources>