<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distancia"
        android:inputType="number"
        android:layout_width="match_parent"
        android:hint="@string/distancia"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_total_quilometros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:gravity="center"
        android:padding="5dp"
        />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_preco"
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_preco_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:gravity="center"
        android:padding="5dp"
        />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_autonomia"
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_hms_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:gravity="center"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/text_gasto_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:layout_marginTop="32dp"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/text_rs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="38dp"
        android:textColor="@color/azul_escuro"
        android:gravity="center"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="32dp"
        android:textSize="20dp"
        android:padding="16dp"
        android:backgroundTint="@color/teal_200"
        />


</LinearLayout>